--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^2.11.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.10.0",
+    "imports-loader": "^0.7.1",
     "node-sass": "^4.4.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
